--- a/guidelinesWP/_bookdown.yml
+++ b/guidelinesWP/_bookdown.yml
@@ -3,6 +3,9 @@ rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
             "02-chap2.Rmd",
             "03-chap3.Rmd",
-            "04-references.Rmd",
-            "05-appendix.Rmd"]
+            "04-chap4.Rmd",
+            "05-chap5.Rmd",
+            "06-chap6.Rmd",
+            "07-references.Rmd",
+            "08-appendix.Rmd"]
 delete_merged_file: true
