--- a/guidelinesWP/_bookdown.yml
+++ b/guidelinesWP/_bookdown.yml
@@ -5,6 +5,7 @@ rmd_files: ["index.Rmd",
             "03-chap3.Rmd",
             "04-chap4.Rmd",
             "05-chap5.Rmd",
-            "06-references.Rmd",
-            "07-appendix.Rmd"]
+            "06-chap6.Rmd",
+            "07-references.Rmd",
+            "08-appendix.Rmd"]
 delete_merged_file: true
