--- a/caseStudyWP/_bookdown.yml
+++ b/caseStudyWP/_bookdown.yml
@@ -7,6 +7,10 @@ rmd_files: ["index.Rmd",
             "05-chap5.Rmd",
             "06-chap6.Rmd",
             "07-references.Rmd",
-            "08-appendix.Rmd",
-            "09-appendixsamSim.Rmd"]
+            "08-appendix-chum-data.Rmd",
+            "09-appendixsamSim.Rmd",
+            "10-appendix.Rmd",
+            "11-appendix.Rmd",
+            "12-appendix.Rmd",
+            "13-appendix-github-links.Rmd"]
 delete_merged_file: true
