added appendix 9 to Guidelines paper

--- a/guidelinesWP/_bookdown.yml
+++ b/guidelinesWP/_bookdown.yml
@@ -7,5 +7,6 @@ rmd_files: ["index.Rmd",
             "05-chap5.Rmd",
             "06-chap6.Rmd",
             "07-references.Rmd",
-            "08-appendix.Rmd"]
+            "08-appendix.Rmd",
+            "09-appendix.Rmd"]
 delete_merged_file: true
