Update chum appendix name to appendix-chum in appendix, chum chapter and .yml file

--- a/caseStudyWP/_bookdown.yml
+++ b/caseStudyWP/_bookdown.yml
@@ -7,7 +7,7 @@ rmd_files: ["index.Rmd",
             "05-chap5.Rmd",
             "06-chap6.Rmd",
             "07-references.Rmd",
-            "08-appendix-chum-data.Rmd",
+            "appendix-chum.Rmd",
             "09-appendixsamSim.Rmd",
             "11-appendix.Rmd",
             "12-appendix.Rmd",
