Change name of github links appendix

--- a/caseStudyWP/_bookdown.yml
+++ b/caseStudyWP/_bookdown.yml
@@ -11,5 +11,5 @@ rmd_files: ["index.Rmd",
             "09-appendixsamSim.Rmd",
             "11-appendix.Rmd",
             "12-appendix.Rmd",
-            "13-appendix-github-links.Rmd"]
+            "appendix-github-links.Rmd"]
 delete_merged_file: true
