updating appendix names for case study paper

--- a/caseStudyWP/_bookdown.yml
+++ b/caseStudyWP/_bookdown.yml
@@ -7,9 +7,9 @@ rmd_files: ["index.Rmd",
             "05-chap5.Rmd",
             "06-chap6.Rmd",
             "07-references.Rmd",
-            "appendix-chum.Rmd",
-            "09-appendixsamSim.Rmd",
-            "11-appendix.Rmd",
-            "12-appendix.Rmd",
-            "appendix-github-links.Rmd"]
+            "appendix-github-links.Rmd",
+            "appendix-samSim.Rmd",
+            "appendix-coho.Rmd",
+            "appendix-ERsensitivity.Rmd",
+            "appendix-chum.Rmd"]
 delete_merged_file: true
