--- a/guidelinesWP/_bookdown.yml
+++ b/guidelinesWP/_bookdown.yml
@@ -1,6 +1,7 @@
 book_filename: "resdoc"
 rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
+            "01.5-reviewRPs.Rmd",
             "02-chap2.Rmd",
             "03-chap3.Rmd",
             "04-chap4.Rmd",
