revised yaml, finished Tim's comments and acknowledgements

--- a/guidelinesWP/_bookdown.yml
+++ b/guidelinesWP/_bookdown.yml
@@ -6,6 +6,7 @@ rmd_files: ["index.Rmd",
             "03-chap3.Rmd",
             "05-chap5.Rmd",
             "06-chap6.Rmd",
+            "06.5-Acknowledgements.Rmd",
             "07-references.Rmd",
             "10-appendixCaseStudies.Rmd",
             "08-appendix.Rmd",
