--- a/guidelinesWP_FN/_bookdown.yml
+++ b/guidelinesWP_FN/_bookdown.yml
@@ -3,9 +3,9 @@ rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
             "01.5-reviewRPs.Rmd",
             "02-chap2.Rmd",
-            "03-chap3.Rmd",
-            "05-chap5.Rmd",
-            "06-chap6.Rmd",
+            "03-chap3.Rmd", # issues in all figures - currently remain as english, swapping 1by1
+            "05-chap5.Rmd", # issues, consider re-cloning and copy again
+            "06-chap6.Rmd", 
             "06.5-Acknowledgements.Rmd",
             "07-references.Rmd",
             "10-appendixCaseStudies.Rmd",
